# c55-data-mid-project-pavel-tisner

./: .env.example  .gitignore  AI_ASSIST.md  Dockerfile  README.md  conftest.py  pyproject.toml
.github/: autograder.py
.github/workflows/: autograder.yml  ci.yml
docs/: blob_verification.txt  execution_history.txt  job_logs.txt  job_logs_region_names.txt  postgres_verification.txt
src/: ingest.py  models.py  pipeline.py  storage.py  transform.py  validate.py
tests/: test_models.py
